syntax = "proto2";

package core;

message Block {
    // Low 64 bits of uint128
    required uint64 low = 1;
    // High 64 bits of uint128
    required uint64 high = 2;
}

message BlockPair {
    // Block corresponding to logical low
    required Block low = 1;
    // Block corresponding to logical high
    required Block high = 2;
}

message RistrettoPoint {
    // Compressed byte representation of RistrettoPoint
    required bytes point = 1;
}