syntax = "proto2";

import "core.proto";

package core.ot;

// Setup message sent by Base OT Sender
message SenderSetup {
    // Senders public key
    required core.RistrettoPoint public_key = 1;
}

// Message sent by OT Sender containing encrypted values
message SenderPayload {
    // Encrypted values
    repeated core.LabelPair encrypted_values = 1;
}

// Setup message sent by Base OT Receiver
message ReceiverSetup {
    // Keys used to encrypt values by Sender
    repeated core.RistrettoPoint keys = 1;
}

// Setup message sent by OT Receiver
message ExtReceiverSetup {
    required uint32 ncols = 1;
    repeated bytes table = 2;
}

// Derandomization message sent by OT Receiver
message ExtDerandomize {
    repeated bool flip = 1;
}

message ExtSenderPayload {
    // Encrypted values
    repeated core.LabelPair encrypted_values = 1;
}

message Message {
    oneof msg {
        SenderSetup sender_setup = 1;
        SenderPayload sender_payload = 2;
        ReceiverSetup receiver_setup = 3;
        ExtReceiverSetup ext_receiver_setup = 4;
        ExtDerandomize ext_derandomize = 5;
        ExtSenderPayload ext_sender_payload = 6;
    }
}