syntax = "proto2";

import "core.proto";

package core.ot;

// Setup message sent by Base OT Sender
message BaseSenderSetup {
    // Sender's public key
    required core.RistrettoPoint public_key = 1;
}

// Message sent by OT Sender containing encrypted values
message BaseSenderPayload {
    // Encrypted values
    repeated core.BlockPair ciphertexts = 1;
}

// Setup message sent by Base OT Receiver
message BaseReceiverSetup {
    // The blinded choice bit sent by the receiver
    repeated core.RistrettoPoint blinded_choices = 1;
}

// Setup message sent by OT Receiver
message ExtReceiverSetup {
    required uint32 ncols = 1;
    required bytes table = 2;
    required bytes x = 3;
    required bytes t0 = 4;
    required bytes t1 = 5;
}

// Derandomization message sent by OT Receiver
message ExtDerandomize {
    repeated bool flip = 1;
}

message ExtSenderPayload {
    // Encrypted values
    repeated core.BlockPair ciphertexts = 1;
}

// Setup message sent by Base OT Sender in preparation for the OT extension
// protocol
message BaseSenderSetupWrapper {
    required BaseSenderSetup setup = 1;
    required bytes cointoss_commit = 2;
}

// Setup message sent by Base OT Receiver in preparation for the OT extension
// protocol
message BaseReceiverSetupWrapper {
    required BaseReceiverSetup setup = 1;
    required bytes cointoss_share = 2;
}

// Message sent by OT Sender in preparation for the OT extension
// protocol
message BaseSenderPayloadWrapper {
    required BaseSenderPayload payload = 1;
    required bytes cointoss_share = 2;
}


message Message {
    oneof msg {
        BaseSenderSetup base_sender_setup = 1;
        BaseSenderPayload base_sender_payload = 2;
        BaseReceiverSetup base_receiver_setup = 3;
        ExtReceiverSetup ext_receiver_setup = 4;
        ExtDerandomize ext_derandomize = 5;
        ExtSenderPayload ext_sender_payload = 6;
        BaseSenderSetupWrapper base_sender_setup_wrapper = 7;
        BaseReceiverSetupWrapper base_receiver_setup_wrapper = 8;
        BaseSenderPayloadWrapper base_sender_payload_wrapper = 9;
    }
}
